--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
-* text=unix
+* text eol=lf
 
 # Custom for Visual Studio
 *.cs     diff=csharp
