Rename update tree
Former-commit-id: b003c7c8ec9cd9692651434506f48147f9deba66 [formerly 41106b6248e4e8289b79e25c8cb751b2fed62693]
Former-commit-id: ad0a763f659563e880ef23443ab6f82b4e903852

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 /rpmbuild/SRPMS/*
 !/rpmbuild/SRPMS
 /rpmbuild/SOURCES/MailScanner*/
-/rpmbuild/SOURCES/eFa-4.0.1.tar.gz
+/rpmbuild/SOURCES/eFa-*.tar.gz
 /rpmbuild/SOURCES/eFa-base-4.0.0.tar.gz
 
