--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@
 /rpmbuild/SOURCES/MailScanner*/
 /rpmbuild/SOURCES/eFa-*.tar.gz
 /rpmbuild/SOURCES/eFa-base-4.0.0.tar.gz
-
+!/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit.old
