--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/.env
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/.env
@@ -14,8 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=ae978109dabb5131e6c968d730014583
+APP_ENV=prod
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
