--- a/debbuild/clamav-unofficial-sigs/debian/control
+++ b/debbuild/clamav-unofficial-sigs/debian/control
@@ -1,13 +1,15 @@
 Source: clamav-unofficial-sigs
-Maintainer: Adrian Jon Kriel <admin@extremeshok.com>
+Maintainer: Shawn Iverson <shawniverson@efa-project.org>
 Section: misc
 Priority: optional
 Standards-Version: 4.1.3
 Build-Depends: debhelper (>= 11)
 
 Package: clamav-unofficial-sigs
-Architecture: any
-Depends: ${misc:Depends}, clamav (>=0.101.0), bind-utils (>=9.9.4)
+Architecture: all
+Depends: ${misc:Depends},
+         clamav (>=0.103.2),
+         bind9-utils (>=1:9.16.15-1)
 Description: scripts for unofficial clamav signatures
  The clamav-unofficial-sigs script provides a simple way to download, test, and
  update third-party signature databases provided by Sanesecurity, FOXHOLE,
