--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /rpmbuild/SOURCES/eFa-*.tar.gz
 /rpmbuild/SOURCES/eFa-base-4.0.0.tar.gz
 /rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit.old
+/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit.tgz
